[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = false
warn_unused_ignores = true
